cros: Fix stylus detection for chrome --mus

The field ui::TouchscreenDevice::is_stylus was not being serialized
over mojo, so code in ash didn't detect the stylus.

* Add mojo field and serialization
* Rename TouchscreenDevice::is_stylus to has_stylus
* Add has_stylus to TouchscreenDevice constructors, in the hope that
  the next person who adds a field will do the same and audit all the
  call sites.

Bug: 777570
Test: events_unittests, manual test on device with stylus
Change-Id: Iae4715a474dac58063a138c7816ab2f56bec8532