ui/events/devices/touchscreen_device.h
@@ -25,11 +25,15 @@ struct EVENTS_DEVICES_EXPORT TouchscreenDevice : public InputDevice {
                     InputDeviceType type,
                     const std::string& name,
                     const gfx::Size& size,
-                    int touch_points);
+                    int touch_points,
+                    bool has_stylus);
 
   TouchscreenDevice(const InputDevice& input_device,
                     const gfx::Size& size,
-                    int touch_points);
+                    int touch_points,
+                    bool has_stylus);
+
+  TouchscreenDevice(const TouchscreenDevice& other);
 
   ~TouchscreenDevice() override;
 
@@ -37,12 +41,14 @@ struct EVENTS_DEVICES_EXPORT TouchscreenDevice : public InputDevice {
   int touch_points;  // The number of touch points this device supports (0 if
                      // unknown).
   // True if the specified touchscreen device is stylus capable.
-  bool is_stylus = false;
+  bool has_stylus = false;
   // Id of the display the touch device targets.
   // NOTE: when obtaining TouchscreenDevice from InputDeviceManager this value
   // may not have been updated. See
   // InputDeviceManager::AreTouchscreenTargetDisplaysValid() for details.
   int64_t target_display_id = display::kInvalidDisplayId;
+
+  // NOTE: If adding fields please update mojo/input_devices.mojom.
 };
 
 }  // namespace ui
