ui/display/manager/chromeos/touch_transform_controller_unittest.cc
@@ -57,7 +57,7 @@ ui::TouchDeviceTransform CreateTouchDeviceTransform(
 ui::TouchscreenDevice CreateTouchscreenDevice(unsigned int id,
                                               const gfx::Size& size) {
   return ui::TouchscreenDevice(id, ui::InputDeviceType::INPUT_DEVICE_EXTERNAL,
-                               std::string(), size, 0);
+                               std::string(), size, 0, false /* has_stylus */);
 }
 
 std::string GetTouchPointString(
